@@ -26,6 +26,8 @@ fai (3.2.21) unstable; urgency=low
   * setup-storage, setup-storage/Exec.pm: auto-detect a proper way to tell
     udev to settle (udevsettle is used in etch, udevadm settle for sid; thanks
     matrix.systems@matrix.msu.edu for a first patch). (closes: #530656)
+  * setup-storage/Volumes.pm: Updated mdadm --scan output parser to work with
+    current mdadm versions.
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
